Start working on the first page

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-    "name": "react-template-app",
+    "name": "Multi-Drone-Path-Planning-System",
     "version": "0.1.0",
     "private": true,
     "dependencies": {
