--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
         "react-redux": "^7.2.6",
+        "react-router-dom": "^6.5.0",
         "react-scripts": "5.0.0",
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
@@ -44,5 +45,8 @@
             "last 1 firefox version",
             "last 1 safari version"
         ]
+    },
+    "devDependencies": {
+        "@types/react-dom": "^18.0.9"
     }
 }
