--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,5 +1,7 @@
 {
     "compilerOptions": {
+        "jsx": "react",
+        "jsx": "react",
         // project options
         "lib": ["ESNext", "dom"], // specifies which default set of type definitions to use ("DOM", "ES6", etc)
         "outDir": "lib", // .js (as well as .d.ts, .js.map, etc.) files will be emitted into this directory.,
@@ -30,8 +32,9 @@
     },
     // "include": ["./**/*.ts", "./src/index.d.ts"],
     "include": [
+        "./**/*.ts",
         "src",
-        "src/declaration.d.ts",
+        "src/declaration.d.ts"
     ],
     "exclude": ["node_modules/**/*"]
   }  
