--- a/package.json
+++ b/package.json
@@ -19,7 +19,8 @@
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
         "typescript": "^4.5.4",
-        "web-vitals": "^2.1.3"
+        "web-vitals": "^2.1.3",
+        "yup": "^0.32.11"
     },
     "scripts": {
         "start": "react-scripts start",
