--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "@types/react": "^17.0.38",
         "@types/react-redux": "^7.1.22",
         "@types/redux-logger": "^3.0.9",
+        "classnames": "^2.3.2",
         "loglevel": "^1.8.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
