--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
         "redux": "^4.1.2",
         "redux-logger": "^3.0.6",
         "typescript": "^4.5.4",
-        "web-vitals": "^2.1.3",
-        "yup": "^0.32.11"
+        "web-vitals": "^2.1.3"
     },
     "scripts": {
         "start": "react-scripts start",
