--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
         "@types/react": "^17.0.38",
         "@types/react-redux": "^7.1.22",
         "@types/redux-logger": "^3.0.9",
+        "axios": "^1.2.2",
         "classnames": "^2.3.2",
         "loglevel": "^1.8.0",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
+        "react-query": "^3.39.2",
         "react-redux": "^7.2.6",
         "react-router-dom": "^6.5.0",
         "react-scripts": "5.0.0",
